# magents

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: CMakeLists.txt
src/: CMakeLists.txt  magents.c
